syntax = "proto3";

option go_package = "github.com/d1agnoze/kitchen/services/auth/pb";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string passwordHash = 4;
  string address = 5;
}

service AuthService {
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string email = 1;
  string passwordHash = 2;
}

message LoginResponse {
  string token = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  string name = 1;
  string email = 2;
  string address = 3;
}
